# sound-sigils

./: .gitignore  CLAUDE.md  DEP_REPORT.md  README.md  pyproject.toml
scripts/: sigils.py
sound_sigils/: __init__.py  audio.py  cli.py  definitions.py  engine.py  generators.py  models.py
tests/: test_audio.py  test_cli.py  test_definitions.py  test_engine.py  test_generators.py  test_models.py
web/: index.html
