[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sound-sigils"
version = "1.0.0"
description = "Audio representations of N'Ko sigils — each character mapped to a distinctive sonic signature"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Mohamed Diomande" },
]
keywords = ["nko", "audio", "sigils", "sonification", "synthesis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "pytest-cov>=5.0"]

[project.scripts]
sound-sigils = "sound_sigils.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["sound_sigils"]
